--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 body {
     background-color: #000;
+    color: #ccc;
+}
+
+.map {
+    margin-left: 20px;
+    width: 80%;
+    height: 600px;
+}
+
+.header {
+    margin-bottom: 50px;
+}
+
+.button {
+    border: 1px solid #666;
+    cursor: pointer;
+    padding: 5px 20px;
+    margin: 0px 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+.gmap_img {
+}
+
+#mapy_container div div div img {
+    opacity: 0.1;   
+}
+
+.slider-container {
+    margin: 10px;
+}
+
+input[type=range] {
+    background-color: #000;
 }
