--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
+html, body, .map {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     background-color: #000;
     color: #ccc;
 }
 
 .map {
-    margin-left: 20px;
-    width: 80%;
-    height: 600px;
-}
-
-.header {
-    margin-bottom: 50px;
+    width: 100%;
 }
 
 .button {
@@ -25,6 +25,7 @@ body {
 }
 
 .gmap_img {
+    opacity: 0.75;
 }
 
 #mapy_container div div div img {
@@ -32,9 +33,17 @@ body {
 }
 
 .slider-container {
-    margin: 10px;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 input[type=range] {
-    background-color: #000;
+    margin: 10px;
+    background-color: #fff;
+    border: 2px solid #fff;
+    width: 120px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    padding: 2px 5px;
 }
