--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ html, body, .map {
 }
 
 body {
+    font-family: Roboto, Arial, sans-serif;
     background-color: #000;
-    color: #ccc;
+    color: #000;
 }
 
 .map {
@@ -38,12 +39,46 @@ body {
     top: 0;
 }
 
-input[type=range] {
+.gradients p {
+    padding: 5px 0 10px 5px;
+    margin: 0;
+}
+
+.gradient {
+  text-align: right;
+  width: 30px;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+
+.one { border-top: 5px solid #00F800; }
+.two { border-top: 5px solid #68F900; }
+.three { border-top: 5px solid #A5F700; }
+.four { border-top: 5px solid #DFF800; }
+.five { border-top: 5px solid #FADA00; }
+.six { border-top: 5px solid #FD9C00; }
+.seven { border-top: 5px solid #FD5E02; }
+.eight { border-top: 5px solid #F30006; width: 35px; }
+
+
+.gradients {
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    width: 250px;
+    padding: 5px;
+}
+
+.map-ui {
     margin: 10px;
     background-color: #fff;
     border: 2px solid #fff;
-    width: 120px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
+}
+
+input[type=range] {
+    width: 120px;
     padding: 2px 5px;
 }
